feat: add on-event and on-target-branch to pr-test.yaml

--- a/.tekton/pr-test.yaml
+++ b/.tekton/pr-test.yaml
@@ -5,6 +5,8 @@ metadata:
   annotations:
     pipelinesascode.tekton.dev/on-comment: "^((/test-all)|(/build-test))$"
     pipelinesascode.tekton.dev/max-keep-runs: "5"
+    pipelinesascode.tekton.dev/on-event: "[incoming]"
+    pipelinesascode.tekton.dev/on-target-branch: "[main**]"
     pipelinesascode.tekton.dev/on-cel-expression: |-
       (
         "abc/.tekton/pr-test.yaml".pathChanged() ||
